--- a/anypoint-data-gateway/v/latest/creating-and-configuring-a-gateway.adoc
+++ b/anypoint-data-gateway/v/latest/creating-and-configuring-a-gateway.adoc
@@ -96,7 +96,13 @@ image:configure_oracle_db-1.2.b.png[configure_oracle_db-1.2.b]
 
 === Configuring a New Connection for a Private Network
 
-The configuration procedure allows you to specify whether your data source is on a private network (see screenshot above). If this is the case, the wizard takes you through the process of downloading *Cloud Extender*, an agent which allows communication between Data Gateway and the data source without the need to modify your firewall. You must install Cloud Extender on a machine that resides within the private network, and which has access to the data source (valid user credentials).
+The configuration procedure allows you to specify whether your data source is on a private network (see screenshot above). If this is the case, the wizard takes you through the process of downloading *Cloud Extender*:
+
+[[cloudextender]]
+:: The Cloud Extender agent provides a secure data link between your Data Gateways and enterprise data sources without the need to modify your firewall. +
+Any private services or data sources behind an enterprise firewall can be made available to your Data Gateway application by using  *Cloud Extender*
+
+You must install Cloud Extender on a machine that resides within the private network, and which has access to the data source (valid user credentials).
 
 You can download and install Cloud Extender during the process for configuring a new gateway, as described below.
 
